2009-08-06  Sam Steingold  <sds@gnu.org>

	fix bug #[ 1237776 ]: binary distribution does not include local libs
	* makemake.in (distrib): link local libs mentioned in
	base/makevars:LIBS into TOPDIR/base (same for full)
	and modify distmakefile accordingly

2009-08-06  Sam Steingold  <sds@gnu.org>

	* modules/berkeley-db/Makefile.in, modules/bindings/glibc/Makefile:
	* modules/bindings/win32/Makefile, modules/clx/new-clx/Makefile.in:
	* modules/dbus/Makefile.in, modules/dirkey/Makefile.in:
	* modules/fastcgi/Makefile.in, modules/gdbm/Makefile.in:
	* modules/gtk2/Makefile.in, modules/i18n/Makefile.in:
	* modules/libsvm/Makefile, modules/matlab/Makefile:
	* modules/netica/Makefile, modules/oracle/Makefile.in:
	* modules/pari/Makefile.in, modules/pcre/Makefile.in:
	* modules/postgresql/Makefile.in, modules/queens/Makefile:
	* modules/rawsock/Makefile.in, modules/readline/Makefile.in:
	* modules/regexp/Makefile.in, modules/syscalls/Makefile.in:
	* modules/wildcard/Makefile.in, modules/zlib/Makefile.in:
	(DISTRIBFILES): include fas files for dynamic loading

2009-08-06  Sam Steingold  <sds@gnu.org>

	* clisp-link.in (prepare_dynamic_modules): in the REQUIRE file,
	wrap LOADs in APPEASE-CERRORS because FFI modules might try to
	interface to functions absent on this platform

2009-08-06  Sam Steingold  <sds@gnu.org>

	base modules are always linked statically
	* clisp-link.in (with_dynamic_modules): get from the environment
	with the default being @with_dynamic_modules@
	* makemake.in (base): pass with_dynamic_modules=no to clisp-link

2009-08-06  Sam Steingold  <sds@gnu.org>

	* clisp-link.in (lncp): rename from link to separate from link.sh
	(lncp_some): rename from link_some to simplify search

2009-08-06  Sam Steingold  <sds@gnu.org>

	* Makefile.devel (MAKEFILE_IN): depend on aclocal.m4

2009-08-05  Sam Steingold  <sds@gnu.org>

	* modules/regexp/link.sh.in (NEW_FILES): remove regexp.dvi
	* modules/regexp/Makefile.in (DISTRIBFILES, all): ditto